--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,49 +1,49 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools >= 64"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "idlemypyextension"
-version = "0.2.1"
+name = "market_api"
+dynamic = ["version"]
 authors = [
-  { name="CoolCat467" },
+  { name="CoolCat467", email="CoolCat467@duck.com" },
 ]
-description = "Mypy daemon extension for Python IDLE"
+description = "MineOS Market Client"
 readme = {file = "README.md", content-type = "text/markdown"}
 license = {file = "LICENSE"}
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3 :: Only",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
     "Topic :: Utilities",
+    "Framework :: Trio",
     "Typing :: Typed",
 ]
-keywords = ["mypy", "dmypy", "idle", "extension", "development", "daemon"]
+keywords = ["minecraft", "mineos", "api", "client", "lua"]
 dependencies = [
-    "trio~=0.22.2",
+    "trio~=0.24.0",
+    "httpx~=0.26.0",
 ]
+
+[tool.setuptools.dynamic]
+version = {attr = "market_api.__init__.__version__"}
+
 
 [project.urls]
-"Homepage" = "https://github.com/CoolCat467/idlemypyextension"
-"Source" = "https://github.com/CoolCat467/idlemypyextension"
-"Bug Tracker" = "https://github.com/CoolCat467/idlemypyextension/issues"
-
-[project.scripts]
-idlemypyextension = "idlemypyextension:check_installed"
+"Homepage" = "https://github.com/CoolCat467/MineOS-Market-Client"
+"Source" = "https://github.com/CoolCat467/MineOS-Market-Client"
+"Bug Tracker" = "https://github.com/CoolCat467/MineOS-Market-Client/issues"
 
 [tool.setuptools.package-data]
-idlemypyextension = ["py.typed"]
-
-[tool.pytest.ini_options]
-addopts = "--cov-report term-missing --cov=idlemypyextension"
-testpaths = [
-    "tests",
-]
+market_api = ["py.typed"]
 
 [tool.mypy]
 mypy_path = "src"
@@ -65,10 +65,6 @@ warn_unreachable = true
 warn_unused_configs = true
 warn_unused_ignores = true
 
-[tool.black]
-line-length = 79
-target-version = ['py311']
-
 [tool.ruff.isort]
 combine-as-imports = true
 
@@ -76,71 +72,105 @@ combine-as-imports = true
 all = true
 disable_all_dunder_policy = true
 
-[tool.ruff.per-file-ignores]
-"tests/*" = ["D103"]
+[tool.black]
+line-length = 79
+target-version = ['py310']
 
 [tool.ruff]
 line-length = 79
 fix = true
 
 include = ["*.py", "*.pyi", "**/pyproject.toml"]
-
-select = ['A', 'B', 'C4', 'COM', 'CPY', 'D', 'E', 'EXE', 'F', 'FA', 'I', 'N', 'PIE', 'PT', 'PYI', 'Q', 'RET', 'RUF', 'S', 'SIM', 'SLOT', 'UP', 'YTT']
-ignore = [
-    "D211",  # conflicts with docstrings
-    "D213",  # conflicts with docstrings
-    "E203",  # conflicts with black
-    "E501",  # conflicts with black
-    "S101",  # use of assert for tests and type narrowing
-##    "E402",  # module level import not at top of file
-    "D203",  # One blank line before class
-    "D401",  # Imparative mood docstrings
+select = [
+    "A",     # flake8-builtins
+    "ASYNC", # flake8-async
+    "B",     # flake8-bugbear
+    "C4",    # flake8-comprehensions
+    "COM",   # flake8-commas
+    "D",     # pydocstyle
+    "E",     # Error
+    "EXE",   # flake8-executable
+    "F",     # pyflakes
+    "FA",    # flake8-future-annotations
+    "I",     # isort
+    "N",     # pep8-naming
+    "PIE",   # flake8-pie
+    "PT",    # flake8-pytest-style
+    "PYI",   # flake8-pyi
+    "Q",     # flake8-quotes
+    "RET",   # flake8-return
+    "RUF",   # Ruff-specific rules
+    "S",     # flake8-bandit
+    "SIM",   # flake8-simplify
+    "SLOT",  # flake8-slots
+    "TCH",   # flake8-type-checking
+    "UP",    # pyupgrade
+    "W",     # Warning
+    "YTT",   # flake8-2020
+]
+extend-ignore = [
+    "D203",   # One blank line before class
+    "D204",   # blank line thing
+    "D211",   # no-blank-line-before-class
+    "D213",   # multi-line-summary-second-line
+    "D417",   # "Missing argument descriptions"
+    "E501",   # line-too-long
+    "S101",   # use of assert for tests and type narrowing
+    "SIM117", # Use multiple with statements at the same time
 ]
 
-fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
-unfixable = []#"D203"]
-
-# Exclude a variety of commonly ignored directories.
-exclude = [
-    ".bzr",
-    ".direnv",
-    ".eggs",
-    ".git",
-    ".git-rewrite",
-    ".hg",
-    ".mypy_cache",
-    ".nox",
-    ".pants.d",
-    ".pytype",
-    ".ruff_cache",
-    ".svn",
-    ".tox",
-    ".venv",
-    "__pypackages__",
-    "_build",
-    "buck-out",
-    "build",
-    "dist",
-    "node_modules",
-    "venv",
+[tool.ruff.per-file-ignores]
+"tests/*" = [
+    "D100",  # undocumented-public-module
+    "D103",  # undocumented-public-function
+    "D107",  # Missing docstring
 ]
 
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+[tool.pytest.ini_options]
+addopts = "--cov-report term-missing --cov=market_api"
+testpaths = [
+    "tests",
+]
 
-[tool.ruff.mccabe]
-max-complexity = 10
+[tool.coverage.run]
+branch = true
+source = ["src"]
+omit = []
+
+[tool.coverage.report]
+precision = 1
+skip_covered = true
+exclude_also = [
+    "pragma: no cover",
+    "abc.abstractmethod",
+    "if TYPE_CHECKING.*:",
+    "if _t.TYPE_CHECKING:",
+    "if t.TYPE_CHECKING:",
+    "@overload",
+    'class .*\bProtocol\b.*\):',
+    "raise NotImplementedError",
+]
+partial_branches = [
+    "pragma: no branch",
+    "if not TYPE_CHECKING:",
+    "if not _t.TYPE_CHECKING:",
+    "if not t.TYPE_CHECKING:",
+    "if .* or not TYPE_CHECKING:",
+    "if .* or not _t.TYPE_CHECKING:",
+    "if .* or not t.TYPE_CHECKING:",
+]
 
 [tool.tox]
 legacy_tox_ini = """
     [tox]
-    envlist = py310, py311, mypy, pytest
+    envlist = py310, py311, py312, mypy, pytest
     isolated_build = false
 
     [gh-actions]
     python =
         3.10: py310, mypy, pytest
         3.11: py311, mypy
+        3.12: py312, mypy, pytest
 
     [testenv]
     setenv =
