--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,6 @@ dependencies = [
 [tool.setuptools.dynamic]
 version = {attr = "market_api.__init__.__version__"}
 
-
 [project.urls]
 "Homepage" = "https://github.com/CoolCat467/MineOS-Market-Client"
 "Source" = "https://github.com/CoolCat467/MineOS-Market-Client"
@@ -65,7 +64,7 @@ warn_unreachable = true
 warn_unused_configs = true
 warn_unused_ignores = true
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 combine-as-imports = true
 
 [tool.pycln]
@@ -81,6 +80,8 @@ line-length = 79
 fix = true
 
 include = ["*.py", "*.pyi", "**/pyproject.toml"]
+
+[tool.ruff.lint]
 select = [
     "A",     # flake8-builtins
     "ASYNC", # flake8-async
@@ -104,6 +105,7 @@ select = [
     "SIM",   # flake8-simplify
     "SLOT",  # flake8-slots
     "TCH",   # flake8-type-checking
+    "TRIO",  # flake8-trio
     "UP",    # pyupgrade
     "W",     # Warning
     "YTT",   # flake8-2020
@@ -119,7 +121,7 @@ extend-ignore = [
     "SIM117", # Use multiple with statements at the same time
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/*" = [
     "D100",  # undocumented-public-module
     "D103",  # undocumented-public-function
