--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
 ]
 keywords = ["minecraft", "mineos", "api", "client", "lua"]
 dependencies = [
-    "trio~=0.28.0",
+    "trio~=0.29.0",
     "httpx~=0.28.1",
 ]
 
@@ -40,34 +40,36 @@ version = {attr = "market_api.__init__.__version__"}
 "Source" = "https://github.com/CoolCat467/MineOS-Market-Client"
 "Bug Tracker" = "https://github.com/CoolCat467/MineOS-Market-Client/issues"
 
+[project.optional-dependencies]
+tests = [
+    "pytest>=5.0",
+    "pytest-cov>=6.0.0",
+    "pytest-trio>=0.8.0",
+    "coverage>=7.2.5",
+    "uv>=0.5.21",
+    "mypy>=1.14.1",
+]
+tools = [
+    'black>=24.10.0; implementation_name == "cpython"',
+    "ruff>=0.9.2",
+    "codespell>=2.3.0",
+]
+
 [tool.setuptools.package-data]
 market_api = ["py.typed"]
 
 [tool.mypy]
 files = ["src/market_api/",]
-check_untyped_defs = true
-disallow_any_decorated = true
-disallow_any_generics = true
-disallow_any_unimported = true
-disallow_incomplete_defs = true
-disallow_subclassing_any = true
-disallow_untyped_calls = true
-disallow_untyped_decorators = true
-disallow_untyped_defs = true
-ignore_missing_imports = true
-local_partial_types = true
-no_implicit_optional = true
-no_implicit_reexport = true
 show_column_numbers = true
 show_error_codes = true
 show_traceback = true
+disallow_any_decorated = true
+disallow_any_unimported = true
+ignore_missing_imports = true
+local_partial_types = true
+no_implicit_optional = true
 strict = true
-strict_equality = true
-warn_redundant_casts = true
-warn_return_any = true
 warn_unreachable = true
-warn_unused_configs = true
-warn_unused_ignores = true
 
 [tool.ruff.lint.isort]
 combine-as-imports = true
@@ -133,7 +135,7 @@ extend-ignore = [
 "tests/*" = [
     "D100",  # undocumented-public-module
     "D103",  # undocumented-public-function
-    "D107",  # Missing docstring
+    "D107",  # undocumented-public-init
 ]
 
 [tool.pytest.ini_options]
@@ -146,6 +148,9 @@ testpaths = [
 branch = true
 source_pkgs = ["market_api"]
 omit = []
+parallel = true
+relative_files = true
+source = ["."]
 
 [tool.coverage.report]
 precision = 1
